Fixed field errors not showing

--- a/hil/static/css/style.css
+++ b/hil/static/css/style.css
@@ -70,7 +70,7 @@ td.spaced {
 }
 
 .code-frame {
-    background-color: rgba(255, 255, 255, 0.14);
+    background-color: rgba(255, 255, 255, 0.14) !important;
     margin: 5px -5px;
     padding: 15px;
 }
